deployment definitions/ssl/temp.yaml
apiVersion: v1
kind: Service
metadata:
  name: uni-resolver-frontend
  namespace: uni-resolver
spec:
  type: NodePort
  selector:
    app: uni-resolver-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7081
